# xmlpl

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  configure.in
config/m4/: compile_mode_flags.m4
debian/: changelog  control  rules
docker/: Dockerfile
examples/: makeSharablePlaylist.xpl
examples/chiebert/pagegen/: linksgen.xpl  pagegen.xpl  searches.xml  searchgen.xpl  template.xml
examples/google/: google.xpl
examples/helloworld/: helloworld2.xpl  helloworld3.xpl  helloworld4.xpl
examples/hprof2web/: hprof2web.xpl
examples/imdb-query/: imdb-query.xpl
examples/lhindman/iptables_gen/: README  iptables_gen.xpl
examples/mininova.org/: mininova.org.xpl
examples/rhythmdb/: Makefile  rhythmdb.xpl
examples/sine/: sine.xpl  zeroone.xpl
examples/webPictures/: Makefile  gthumbcat  gthumbcatxml  webPictures.xpl
examples/webdoc/: webdoc.xpl
tests/: Makefile  testHarness
tests/xmlplccTests/: compiler  prettyXMLParser
tests/xmlplccTests/BugTests/: Makefile  Makefile.bak
tests/xmlplccTests/CompilerTests/: Makefile  Makefile.bak
tests/xmlplccTests/DOMTests/: Makefile
tests/xmlplccTests/EnvironmentTests/: Makefile.bak
tests/xmlplccTests/ImportTests/: Makefile  Makefile.bak
tests/xmlplccTests/NameTests/: Makefile  Makefile.bak
tests/xmlplccTests/ParserTests/: Makefile.bak
tests/xmlplccTests/PathTests/: Makefile  Makefile.bak
tests/xmlplccTests/RedirectTests/: Makefile  Makefile.bak
tests/xmlplccTests/SequenceTests/: Makefile  Makefile.bak
tests/xmlplccTests/TypeValidationTests/: BinaryOpTypeTest  Makefile.bak
(+22 files in other folders)
